<!--
  ~ Woording for Android is a project by PhiliPdB.
  ~
  ~ Copyright (c) 2016.
  -->

<resources>
    <string name="app_name" translatable="false">Woording</string>

    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_list_view">List</string>
    <string name="title_activity_practice">Practice List</string>
    <string name="title_activity_edit_list">Edit List</string>

    <string name="action_search">Search</string>

    <string name="error_no_connection">No connection</string>
    <string name="error_server">Server error</string>
    <string name="press_BACK_again_to_exit">Please press BACK again to exit</string>

    <!-- Strings related to login -->
    <string name="add_account">Add account</string>
    <string name="no_account">No account? %1$s</string> <!-- %1$s has to be @string/action_register -->
    <string name="already_registered">Already registered? %1$s</string> <!-- %1$s has to be @string/action_sign_in -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Repeat password</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="register_success">You are now successfully registered, please confirm your email so you can login.</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password_or_username">Username or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_repeat_password">Password is not the same</string>
    <string name="error_used_username_email">This username and/or email does already exist</string>

    <!-- Strings related to the lists -->
    <string name="list_item_subtitle" translatable="false">%1$s ↔ %2$s</string>
    <string name="my_lists">My lists</string>
    <string name="others_lists">%1$s\'s lists</string>
    <string name="others_list_alt">%1$s\' lists</string>
    <string name="edit_list">Edit</string>
    <string name="practice">Practice</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="list_deleted">Deleted</string>
    <string name="restored">List restored</string>

    <!-- Practice -->
    <string name="translation">Translation</string>
    <string name="next_word">Next word</string>
    <string name="results">Results</string>
    <string name="wrong_words">Wrong words</string>
    <string name="right_word">Right word</string>
    <string name="my_translation">My translation</string>
    <string name="right_text">You got %1$d%% right.</string>
    <string name="enable_speech">Enable speech</string>
    <string name="disable_speech">Disable speech</string>
    <string name="current_right_words">Right: %1$d</string>
    <string name="current_wrong_words">Wrong: %1$d</string>
    <string name="current_words_left">Words left: %1$d</string>
    <!-- Practice options -->
    <string name="practice_options">Practice options</string>
    <string name="start_practice">Start practice</string>
    <string name="asked_language">Asked language</string>
    <string name="both">Both</string>
    <string name="case_sensitive">Case sensitive</string>
    <string name="ignore_accents">Ignore accents</string>

    <string name="error_wrong_translation">Wrong translation</string>

    <!-- Editing lists -->
    <string name="list_title">List name</string>
    <string name="language_1">Language 1</string>
    <string name="language_2">Language 2</string>
    <string name="sentence">Sentence</string>
    <string name="discard_dialog_text">Discard made changes?</string>
    <string name="discard">Discard</string>
    <string name="list_saved">List saved</string>
    <string name="error_invalid_chars">Title contains invalid characters</string>
    <string name="error_cant_save_server_error">Can\'t save the list due to a server error, please try again later.</string>

    <!-- Friends -->
    <string name="friends">Friends</string>
    <string name="add_friend">Add friend</string>
    <string name="send_request">Send request</string>
    <string name="send_request_title">Send a friend request</string>
    <string name="friend_name">Friend\'s name</string>
    <string name="error_already_friends">Already friends</string>
    <string name="friend_request_sent">Friend request sent</string>
    <string name="friend_request_error">An error occurred while sending a friend request. Please try again later.</string>

    <!-- Languages -->
    <string name="english">English</string>
    <string name="dutch">Dutch</string>
    <string name="german">German</string>
    <string name="french">French</string>
    <string name="latin">Latin</string>
    <string name="greek">Greek</string>
    <string name="spanish">Spanish</string>
    <string name="portuguese">Portuguese</string>
    <string name="italian">Italian</string>

    <!-- Sharing -->
    <string name="shared_with">Shared with</string>
    <string name="shared_nobody">Nobody</string>
    <string name="shared_friends">Friends</string>
    <string name="shared_everybody">Everybody</string>

    <!-- Accessibility -->
    <string name="content_desc_new_list">Create new list</string>
    <string name="content_desc_save_list">Save list</string>

    <!-- Error handling -->
    <string name="error_user_not_found">User not found</string>
    <string name="error_list_not_found">List not found</string>
    <string name="error_list_name_exist">List name does already exists</string>
    <string name="error_cant_save_list_name_exits">Can not save list, because the list name does already exist</string>

    <!-- Misc -->
    <string name="speech_permission_info">Record audio permission is needed to record your voice.</string>
    <string name="speech_permission_not_granted">Can\'t listen to you, because you didn\'t grant the permission</string>
    <string name="share_text_dialog">This list is only visible for your friends. Are you sure you want to share?</string>
    <string name="share_text">Check out %1$s on Woording. woording.com/%2$s/%3$s</string>
    <string name="share_title">Share \"%1$s\" with:</string>
    <string name="undo">Undo</string>
    <string name="account_type" translatable="false">com.woording.android</string>
    <!-- Font family used when drawing letters for letter tile avatars. -->
    <string name="letter_tile_letter_font_family" translatable="false">sans-serif-light</string>

</resources>
