<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Woording for Android is a project by PhiliPdB.
  ~
  ~ Copyright (c) 2016.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ListViewActivity">

    <item
        android:title="@string/practice"
        android:id="@+id/action_practice"
        android:icon="@drawable/ic_assignment_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_edit"
        android:title="@string/edit_list"
        android:icon="@drawable/ic_edit_white_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom"/>

</menu>