<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Woording for Android is a project by PhiliPdB.
  ~
  ~ Copyright (c) 2016.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_practice"
    tools:context=".activity.PracticeActivity"
    android:id="@+id/practice_layout"
    tools:visibility="visible">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/language"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        tools:text="English"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/word_to_translate"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="car"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/right_word"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/red"
        android:visibility="gone"
        tools:text="auto"/>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >

        <com.woording.android.components.ClearableEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/translation"
            android:id="@+id/translation"
            android:inputType="textNoSuggestions"
            android:imeActionId="@+id/next_word"
            android:imeOptions="actionGo"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/next_word"
        android:text="@string/next_word"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        style="@style/Widget.AppCompat.Button"/>

    <TextView
        android:id="@+id/words_left_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/current_words_left"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/right_words_counter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/current_right_words"/>

        <TextView
            android:id="@+id/wrong_words_counter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/current_wrong_words"/>

    </LinearLayout>

</LinearLayout>
