<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_editor_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.woording.android.activity.EditListActivity"
    tools:showIn="@layout/fragment_edit_list"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_title"
            android:hint="@string/list_title"
            android:inputType="text"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:id="@+id/spinner_language_1"
            android:prompt="@string/language_1"
            android:spinnerMode="dropdown"
            tools:listitem="@android:layout/simple_spinner_item"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:id="@+id/spinner_language_2"
            android:prompt="@string/language_2"
            android:spinnerMode="dropdown"
            tools:listitem="@android:layout/simple_spinner_item"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_words_list"
        tools:listItem="@layout/layout_edit_text_row"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:clipToPadding="false"/>

</LinearLayout>
